--- a/src/app/i18n/locales/en/AsteroidEntry.json
+++ b/src/app/i18n/locales/en/AsteroidEntry.json
@@ -1,10 +1,10 @@
 {
   "date": "{{val, datetime}}",
-  "kilometers_one": "{{count, number(maximumFractionDigits: 0)}} kilometer",
-  "kilometers_other": "{{count, number(maximumFractionDigits: 0)}} kilometers",
-  "lunar_one": "{{count, number(maximumFractionDigits: 0)}} lunar orbit",
-  "lunar_other": "{{count, number(maximumFractionDigits: 0)}} lunar orbits",
+  "kilometers_one": "{{count, number}} kilometer",
+  "kilometers_other": "{{count, number}} kilometers",
+  "lunar_one": "{{count, number}} lunar orbit",
+  "lunar_other": "{{count, number}} lunar orbits",
   "order": "ORDER",
   "hazardous": "⚠ Hazardous",
-  "size": "Ø {{count, number(maximumFractionDigits: 0)}} m"
+  "size": "Ø {{count, number}} m"
 }
