feat: infinite scroll

--- a/src/app/i18n/locales/ru/AsteroidEntryGroup.json
+++ b/src/app/i18n/locales/ru/AsteroidEntryGroup.json
@@ -1,5 +1,3 @@
 {
-  "title": "Ближайшие подлёты астероидов",
-  "kilometers": "в километрах",
-  "lunar": "в лунных орбитах"
+  "loading": "Загрузка..."
 }
