--- a/src/app/i18n/locales/en/AsteroidEntryGroup.json
+++ b/src/app/i18n/locales/en/AsteroidEntryGroup.json
@@ -1,5 +1,3 @@
 {
-  "title": "Earliest Asteroid Approaches",
-  "kilometers": "in kilometers",
-  "lunar": "in lunar orbits"
+  "loading": "Loading..."
 }
