feat: cart on main page, css adjustments

--- a/src/app/i18n/locales/en/AsteroidEntry.json
+++ b/src/app/i18n/locales/en/AsteroidEntry.json
@@ -5,6 +5,7 @@
   "lunar_one": "{{count, number}} lunar orbit",
   "lunar_other": "{{count, number}} lunar orbits",
   "order": "ORDER",
+  "inCart": "IN CART",
   "hazardous": "⚠ Hazardous",
   "size": "Ø {{count, number}} m"
 }
