--- a/src/app/i18n/locales/ru/AsteroidEntry.json
+++ b/src/app/i18n/locales/ru/AsteroidEntry.json
@@ -9,6 +9,7 @@
   "lunar_many": "{{count, number}} лунных орбит",
   "lunar_other": "{{count, number}} лунных орбит",
   "order": "ЗАКАЗАТЬ",
+  "inCart": "В КОРЗИНЕ",
   "hazardous": "⚠ Опасен",
   "size": "Ø {{count, number}} м"
 }
