feat: added hazardous icon in asteroid entry

--- a/src/app/i18n/locales/en/AsteroidEntry.json
+++ b/src/app/i18n/locales/en/AsteroidEntry.json
@@ -6,6 +6,6 @@
   "lunar_other": "{{count, number}} lunar orbits",
   "order": "ORDER",
   "inCart": "IN CART",
-  "hazardous": "⚠ Hazardous",
+  "hazardous": "Hazardous",
   "size": "Ø {{count, number}} m"
 }
