--- a/src/app/i18n/locales/ru/AsteroidEntry.json
+++ b/src/app/i18n/locales/ru/AsteroidEntry.json
@@ -10,6 +10,6 @@
   "lunar_other": "{{count, number}} лунных орбит",
   "order": "ЗАКАЗАТЬ",
   "inCart": "В КОРЗИНЕ",
-  "hazardous": "⚠ Опасен",
+  "hazardous": "Опасен",
   "size": "Ø {{count, number}} м"
 }
